
$Id$

2005-07-01 Karl Lehenbauer <karl-pg@sc.com>
    * Fixed memory leaks when connections-as-commands are used
      ($conn exec $statement, etc)

2005-04-16 Brett Schwarz <brett_schwarz@yahoo.com>
    * added more documentation about the new capabilities

2005-02-25 Brett Schwarz <brett_schwarz@yahoo.com>
    * took away pg::conninfo and pg::results, and made one command
      pg::dbinfo. Usage is pg::dbinfo connections and 
      pg::dbinfo results $conn

2004-11-30 Karl Lehenbauer <karl-pg@sc.com>
    * Document pg_exec_prepared, pg_results, and pg_sendquery_prepared.

    * Document pg_exec's ability to take optional arguments for 
      $-substitution in PostgreSQL 7.4+.

    * Documented pg_getresult and pg_result -error suboptions.  

    * Pasted connect string options from the libpq manual rather
      than simply referring Pgtcl users to the libpq manual.

    * Regenerated pdf and html documentation.

2004-11-29 Brett Schwarz <brett_schwarz@yahoo.com>
    * Added commands to escape and unescape binary strings

2004-11-29 Karl Lehenbauer <karl-pg@sc.com>
    * Added library of useful PostreSQL helper functions to the playpen.

    * Added dbobjects PostgreSQL/Itcl-object interface package to the playpen.

    * Added pggrok code to introspect into Postgres databases to the playpen.

2004-11-23 Karl Lehenbauer <karl-pg@sc.com>
    * Simplify result object processing

    * Fixed bug in Pg_cancelrequest where the error message would
      not be returned.

    * Remove unused variables.

    * Silence compiler warnings about a fall-through (that couldn't
      be reached) that would cause a function declared to return something
      to not return anything and about a possibly uninitialized variable.

2004-11-22 Karl Lehenbauer <karl-pg@sc.com>
    * Created playpen directory where interesting things that are not
      yet ready for prime time can be examined and messed with.  
      Added code for turning OIDs returned by pg_result -lAttributes